err/django-feedly.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_feedly-0.6.6.egg-info'...
Listing './lib/python3.5/site-packages/feedly'...
Compiling './lib/python3.5/site-packages/feedly/core.py'...
***   File "./lib/python3.5/site-packages/feedly/core.py", line 55
    except urllib2.HTTPError,e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feedly/feed.py'...
***   File "./lib/python3.5/site-packages/feedly/feed.py", line 137
    print request.POST
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/feedly/hooks.py'...
***   File "./lib/python3.5/site-packages/feedly/hooks.py", line 37
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/migrations'...
Compiling './lib/python3.5/site-packages/feedly/payments.py'...
***   File "./lib/python3.5/site-packages/feedly/payments.py", line 47
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
